err/smapppy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smappPy'...
Compiling './lib/python3.5/site-packages/smappPy/MT.py'...
***   File "./lib/python3.5/site-packages/smappPy/MT.py", line 40
    print "Warning: given tweet is not a modified tweet (as far as we can tell)"
                                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smappPy/facebook'...
Compiling './lib/python3.5/site-packages/smappPy/file_util.py'...
***   File "./lib/python3.5/site-packages/smappPy/file_util.py", line 13
    print "Exiting, please user another file"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/smappPy/networks'...
Compiling './lib/python3.5/site-packages/smappPy/networks/build_follower_network.py'...
***   File "./lib/python3.5/site-packages/smappPy/networks/build_follower_network.py", line 166
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/networks/build_retweet_network.py'...
***   File "./lib/python3.5/site-packages/smappPy/networks/build_retweet_network.py", line 32
    print "Warning: fewer than 2 tweets in given set. This will be a small graph"
                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smappPy/retweet.py'...
***   File "./lib/python3.5/site-packages/smappPy/retweet.py", line 62
    print "Warning: given tweet is not a retweet (as far as we can tell)"
                                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smappPy/tools'...
Compiling './lib/python3.5/site-packages/smappPy/tools/bson_filter.py'...
***   File "./lib/python3.5/site-packages/smappPy/tools/bson_filter.py", line 55
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smappPy/tools/extract_user_data.py'...
***   File "./lib/python3.5/site-packages/smappPy/tools/extract_user_data.py", line 43
    print "Total collection tweets: {0}".format(collection.count())
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/tools/text_wrapper.py'...
***   File "./lib/python3.5/site-packages/smappPy/tools/text_wrapper.py", line 40
    print "Completed processing: {0}".format(args.infile)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/tools/tweet_importer.py'...
***   File "./lib/python3.5/site-packages/smappPy/tools/tweet_importer.py", line 25
    print "Importing tweets from '{0}' into {1}:{2}".format(infile, database, collection)
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/tools/tweet_json2csv.py'...
***   File "./lib/python3.5/site-packages/smappPy/tools/tweet_json2csv.py", line 33
    print "Processing tweet {0}".format(line_count)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smappPy/topics'...
Compiling './lib/python3.5/site-packages/smappPy/topics/build_docs.py'...
***   File "./lib/python3.5/site-packages/smappPy/topics/build_docs.py", line 37
    print "Processing {0}".format(period)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/topics/clean_docs.py'...
***   File "./lib/python3.5/site-packages/smappPy/topics/clean_docs.py", line 36
    print "Building up word counts and cleaning document text"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smappPy/topics/export_topics_text.py'...
***   File "./lib/python3.5/site-packages/smappPy/topics/export_topics_text.py", line 27
    print "Complete. Outfile: {0}".format(args.outfile)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/topics/topic_barcharts.py'...
***   File "./lib/python3.5/site-packages/smappPy/topics/topic_barcharts.py", line 31
    print "Topic sum barchart"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smappPy/topics/utilities.py'...
***   File "./lib/python3.5/site-packages/smappPy/topics/utilities.py", line 13
    print tstr
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smappPy/topics/visualization.py'...
***   File "./lib/python3.5/site-packages/smappPy/topics/visualization.py", line 52
    print "(Saving figure to file '{0}'')".format(outfile)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/tweepy_pool.py'...
***   File "./lib/python3.5/site-packages/smappPy/tweepy_pool.py", line 76
    print TweepError
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smappPy/unicode_csv.py'...
***   File "./lib/python3.5/site-packages/smappPy/unicode_csv.py", line 60
    print row
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/smappPy/user_collection'...
Compiling './lib/python3.5/site-packages/smappPy/user_collection/build_friends_followers.py'...
***   File "./lib/python3.5/site-packages/smappPy/user_collection/build_friends_followers.py", line 121
    print ".. Processing user {0} of {1}".format(user_it, user_count)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/user_collection/build_user_collection.py'...
***   File "./lib/python3.5/site-packages/smappPy/user_collection/build_user_collection.py", line 67
    print "Pass {0}, attempting to find {1} users".format(passnum, len(users_not_found))
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/user_collection/fetch_userdocs.py'...
***   File "./lib/python3.5/site-packages/smappPy/user_collection/fetch_userdocs.py", line 58
    print "{0} userids parsed from {1}".format(len(user_ids), args.users_file)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/user_collection/upload_userdocs.py'...
***   File "./lib/python3.5/site-packages/smappPy/user_collection/upload_userdocs.py", line 47
    print "Uploading {0} IDs from {1}".format(len(user_ids), args.users_file)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smappPy/user_collection/userdocs.py'...
***   File "./lib/python3.5/site-packages/smappPy/user_collection/userdocs.py", line 74
    print "Processing {0} userdocs from {1}".format(collection.count(), collection)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smappPy-0.1.32.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
